--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -7,9 +7,9 @@
 <body>
 
 	<form action="DoLogin" method="POST">
-		Username: <input type="text" name="username"> <br /> 
+		UserName: <input type="text" name="username"> <br /> 
 		Password:		<input type="password" name="password"><br /> 
-		<input type="submit" value="Rress" />
+		<input type="submit" value="Press" />
 	</form>
 
 </body>
